# Nexavey

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_shaders.sh
libs/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/imageloader/: stb_image.hpp
libs/tinyobjloader/: tiny_obj_loader.hpp
shaders/: point_light.frag.glsl  point_light.vert.glsl  shadowmap_shader.frag.glsl  shadowmap_shader.vert.glsl  simple.frag.glsl  simple.vert.glsl  simple_shader.frag.glsl  simple_shader.vert.glsl  triangle.frag.glsl
src/: CMakeLists.txt  main.cpp
src/core/: Engine.cpp  Engine.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.h  Logger.hpp  Window.cpp  Window.hpp
src/engine/core/: nex_device.cpp  nex_device.hpp  nex_engine.cpp  nex_engine.hpp  nex_renderer.cpp  nex_renderer.hpp  nex_swapchain.cpp  nex_swapchain.hpp  nex_utils.hpp  nex_window.cpp  nex_window.hpp
src/engine/graphics/: nex_buffer.cpp  nex_buffer.hpp  nex_descriptors.cpp  nex_descriptors.hpp  nex_pipeline.cpp  nex_pipeline.hpp  nex_texture.cpp  nex_texture.hpp
src/engine/input/: nex_input.cpp  nex_input.hpp
src/engine/lighting/: nex_shadowmap.cpp  nex_shadowmap.hpp
src/engine/scene/: nex_camera.cpp  nex_camera.hpp  nex_entity.cpp  nex_entity.hpp  nex_frame_info.hpp  nex_mesh.cpp  nex_mesh.hpp
src/engine/systems/: point_light_system.cpp  point_light_system.hpp  shadowmap_system.cpp  shadowmap_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/graphics/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/world/: Entity.cpp  Entity.hpp
src/world/components/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Mesh.cpp  Mesh.hpp
